--- a/src/pages/Fruits/styles.css
+++ b/src/pages/Fruits/styles.css
@@ -6,6 +6,16 @@
   height: 100vh;
 }
 
+.box {
+  text-transform: uppercase;
+  color: #000;
+  cursor: pointer;
+  border: 3px solid;
+  padding: 1em 1em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
+    5px 5px 0px 0px;
+}
+
 .container h2 {
   font-size: 60px;
   font-family: "Open Sans", sans-serif;
